# simple-pastebin

./: app.py  pyproject.toml
templates/: paste.html
